# koneta

./: LICENSE  README.md  koneta.cabal
app/: validate-mynumber.hs
src/MyNumber/: Validate.hs
test/: doctests.hs
